<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">外卖</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="notImg">找不到图片</string>
    <string name="title_activity_caiinf">MainActivity</string>
    <string name="title_activity_loginj">LoginjActivity</string>
    <string name="moneyIco">￥</string>
    <string name="login_username">用户名：</string>
    <string name="login_password">密\t码：</string>
    <string name="password_again">确认密码：</string>
    <string name="login_login">登陆</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="regidst">注册</string>
    <string name="caishi">菜式</string>
    <string name="shop">店铺</string>
    <string name="paixu">排序</string>
    <string name="sreach">搜索</string>
    <string name="order_name">名字</string>
    <string name="order_price">单价</string>
    <string name="order_num">数量</string>
    <string name="order_sum">总价</string>
    <string name="order_def_num">1</string>
    <string name="car_put">提交</string>

    <string-array name="sreach_class">
        <item>菜式</item>
        <item>店铺</item>
    </string-array>
    <string-array name="list_my">
        <item>全部订单</item>
        <item>个人信息</item>
        <item>联系我们</item>
        <item>版本信息</item>
        <item>检查更新</item>
    </string-array>

</resources>