<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kirno.take_out_system.view.CaiinfActivity$PlaceholderFragment" >
<!--  android:layout_above="@id/inf_bottom" -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/inf_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ss_border"
            android:contentDescription="@string/notImg"
            android:src="@drawable/pic" />

        <TextView
            android:id="@+id/inf_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/ss_border"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/hello_world" />

        <TextView
            android:id="@+id/inf_infShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/ss_border"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/hello_world" />

        <ListView
            android:id="@+id/inf_talk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inf_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:paddingTop="5dp"
            android:text="@string/moneyIco"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/inf_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ss_btn_buy"
            android:contentDescription="@string/notImg" />
    </LinearLayout>

</RelativeLayout>